--- a/recs.tex
+++ b/recs.tex
@@ -82,7 +82,7 @@
 
 \title{Economics}
 \author{Dyrehaugen Web Notebook}
-\date{2022-08-28}
+\date{2022-09-17}
 
 \begin{document}
 \maketitle
@@ -2650,6 +2650,26 @@ become ``active agents of the countermovement.''
 \href{https://osf.io/preprints/socarxiv/dp3nv}{Braun (2021) Planning Laissez-faire: Supranational Central Banking}
 \href{pdf/Braun_2021_Planning_laissez-faire.pdf}{(pdf)}
 
+\hypertarget{ecb---implosion}{%
+\subsection{ECB - Implosion?}\label{ecb---implosion}}
+
+\emph{Gabor}
+
+Under the financial capitalism supercycle of the past decades, inflation-targeting central banks have been outposts of (financial) capital in the state, guardians of a distributional status-quo that destroyed workers' collective power while building safety nets for shadow banking. The limits of this institutional arrangement that concentrates (pricing) power and profit in (a few) corporate hands are now plain to see. \ldots..
+What if Zugzwang is that last stage of a central banking paradigm, when it implodes under the contradictions of its class politics?
+
+In turning European states into a collateral factory for private finance, the founding fathers did not consider the financial stability implications for the ECB.
+
+The eurozone's macro-financial architecture is wired to amplify volatility in sovereign spreads to the German Bund, via the €9tn repo market. This wholesale money market provides the plumbing for private credit creation, both on bank balance sheets and through securities markets. It was designed --- by the ECB and the European Commission --- to mainly rely on eurozone sovereign bonds as repo collateral. Yet we know from the eurozone sovereign debt crisis that repo collateral valuation means cyclical market liquidity in eurozone sovereigns except Germany, threatening liquidity spirals that only the ECB can prevent. Liquidity spirals, it is worth remembering, or not just bad for eurozone governments, but also for private institutions that use those bonds as collateral.
+
+Putin's invasion of Ukraine, coupled with the reluctance of European governments to act decisively with energy price caps, have left the ECB as a convenient scapegoat. Scapegoating invariably turns dovish central bankers into hawks, particularly when their peers elsewhere act as obedient vassals to the dollar hegemon. Indeed, monetary historians will marvel at that brief period when European politicians believed so much in the euro's potential to unseat the US dollar \ldots{} With that illusion behind us and the euro below parity, the ECB is just another central bank trapped in the global dollar financial cycle, prey to facile comparisons with other central bank interest rates.
+
+``If the climate and geopolitical (shocks, sic) of 2022 are omens of Isabel Schnabel's Great Volatility that most central banks and pundits expect for the near future, then macro-financial stability requires new framework for co-ordination between central banks and Treasuries that can support a state more willing to, and capable of, disciplining capital.''
+
+Such a (new) framework would threaten the privileged position that central banks have had in the macro-financial architecture and in our macroeconomic models. The history of central banking teaches us that policy paradigms die when they cannot offer a useful framework for stabilising macroeconomic conditions, but never at the hands of central bankers themselves.
+
+\href{https://adamtooze.substack.com/p/chartbook-151-zugzwang-are-we-on}{Gabor by Tooze (2022) Zugzwang in Central Banking}
+
 \hypertarget{externalities}{%
 \chapter{Externalities}\label{externalities}}
 
@@ -3362,6 +3382,12 @@ I think many of us imagined that we live in a world where there's a wizard behin
 As much as we love the idea of a free enterprise system, the reality is that markets often fail\ldots if you're trying to address a market failure, you want to have a single person or team in charge that can dictate terms to all the different market actors.
 \end{quote}
 
+\begin{quote}
+Markets: mechanisms for eliciting preferences and equating marginal rates of substitution
+among diverse agents with local information about production and consumption
+opportunities (Hayek) \href{https://www.aeaweb.org/articles?id=10.1257/jep.33.3.118}{Roth (2019) How Market Design Emerged from Game Theory}
+\end{quote}
+
 \hypertarget{market-primacy-1}{%
 \section{Market Primacy}\label{market-primacy-1}}
 
@@ -3472,6 +3498,21 @@ Some might respond to this paper by arguing that cracking down on price leadersh
 \hypertarget{demand}{%
 \chapter{Demand}\label{demand}}
 
+\hypertarget{theory}{%
+\section{Theory}\label{theory}}
+
+The way the economy works, the extraction limit is really an affordability issue. If the cost of extraction rises too high, relative to what people around the world have for spendable income, production will stop because demand (in terms of what people can afford) will drop too low. People will tend to cut back on discretionary spending, such as vacation travel and meals in restaurants, cutting back on demand for fossil fuels.
+
+{[}d{]} How ``demand'' works is poorly understood. Very often, researchers and the general public assume that demand for energy products will automatically remain high.
+
+A surprisingly large share of demand is tied to the need for food, water, and basic services such as schools, roads, and bus service. Poor people require these basics just as much as rich people do. There are literally billions of poor people in the world. If the wages of poor people fall too low relative to the wages of rich people, the system cannot work. Poor people find that they must spend nearly all their income on food, water and housing. As a result, they have little left to pay taxes to support basic governmental services. Without adequate demand from poor people, the prices of commodities tend to fall too low to encourage reinvestment.
+
+The majority of fossil fuel use is by commercial and industrial users. For example, natural gas is often used in making nitrogen fertilizer. If the price of natural gas is high, the price of fertilizer will rise higher than farmers are willing to pay for the fertilizer. Farmers will cut back on fertilizer use, reducing yields for their crops. The farmers' own costs will be lower, but there will be less of the desired crops grown, perhaps indirectly raising overall food prices. This is not a connection that economic modelers build into their models.
+
+The lockdowns of 2020 show that governments can indeed ramp up demand (and thus prices) for energy products by sending out checks to citizens. We are now seeing that the approach seems to produce inflation rather than more energy production. Also, countries without energy resources of their own may see their currencies fall with respect to the US dollar.
+
+\href{https://ourfiniteworld.com/2022/08/23/why-no-politician-is-willing-to-tell-us-the-real-energy-story/}{Tverberg (2022) Why No Politician Is Willing to Tell Us the Real Energy Story}
+
 \hypertarget{human-needs}{%
 \section{Human Needs}\label{human-needs}}
 
@@ -3520,6 +3561,8 @@ Unfortunately, the reaction of the mainstream was less enlightened: rather than 
 Vintage game theorists is the best kind of economist (and some of the macroeconomists do even sometimes interpret their models as mean-field games)
 (Beatrice Cherrier)
 \end{quote}
+
+\href{https://plato.stanford.edu/entries/game-theory/}{Plato: Game Theory Article}
 
 \hypertarget{nash-equilibrium}{%
 \section{Nash Equilibrium}\label{nash-equilibrium}}
@@ -3632,6 +3675,15 @@ Both game theory and design theory look at the competing and cooperative influen
 
 \href{pdf/Nobel_2007_Mechanism_Design.pdf}{Nobel (2007) mechnism Design}
 
+\hypertarget{market-design}{%
+\section{Market Design}\label{market-design}}
+
+\emph{Roth Abstract}
+
+We interview each other about how game theory and mechanism design evolved into practical market design. When we learned game theory, games were modeled either in terms of the strategies available to the players (``noncooperative games'') or the outcomes attainable by coalitions (``cooperative games''), and these were viewed as models for different kinds of games. The model itself was viewed as a mathematical object that could be examined in its entirety. Market design, however, has come to view these models as complementary approaches for examining different ways marketplaces operate within their economic environment. Because that environment can be complex, there will be unobservable aspects of the game. Mathematical models themselves play a less heroic, stand-alone role in market design than in the theoretical mechanism design literature. Other kinds of investigation, communication, and persuasion are important in crafting a workable design and helping it to be adopted, implemented, maintained, and adapted.
+
+\href{https://www.aeaweb.org/articles?id=10.1257/jep.33.3.118}{Roth (2019) How Market Design Emerged from Game Theory}
+
 \hypertarget{inequality}{%
 \chapter{Inequality}\label{inequality}}
 
@@ -3642,6 +3694,16 @@ Stop talking about inequality, start talking about exploitation.
 \end{quote}
 
 \href{https://ianwrightsite.wordpress.com/2017/11/16/the-social-architecture-of-capitalism/}{Ian Wright (2017) The Social Architecture of Capitalism}
+
+\hypertarget{us-and-uk-are-poor-countries-with-rich-people-within}{%
+\section{US and UK are poor countries with rich people within}\label{us-and-uk-are-poor-countries-with-rich-people-within}}
+
+\includegraphics{fig/US_UK_Poor_Countries_with_Rich_People.png}
+
+On comparison of income levels adjusting for inequality
+UK \& USA emerge as ``poor societies'' with rich people in them.
+
+\citep[ (2022) FT (paywall)]{jburnmurdoch}(\url{https://www.ft.com/content/ef265420-45e8-497b-b308-c951baa68945})
 
 \hypertarget{inflation-1}{%
 \chapter{Inflation}\label{inflation-1}}
@@ -8086,6 +8148,23 @@ GDP per capita heavily under-estimates the consumer welfare gains at early stage
 
 \href{https://www.lse.ac.uk/granthaminstitute/roger-fouquet-research-in-progress/}{Fouquet}
 
+\hypertarget{world-economy}{%
+\chapter{World Economy}\label{world-economy}}
+
+\emph{Tverberg}
+
+\begin{quote}
+In physics terms, the world economy is a dissipative structure, just as all plants, animals and ecosystems are. All dissipative structures have finite lifespans, including the world economy.
+\end{quote}
+
+The economy is something that grows through the ``dissipation'' of energy. Examples of dissipation of energy include the digestion of food to give energy to humans, the burning of fossil fuels, and the use of electricity to power a light bulb. A rise in world energy consumption is highly correlated with growth in the world economy. Falling energy consumption is associated with economic contraction.
+
+\includegraphics{fig/world-GDP-and-world-energy-production.png}
+
+\href{https://ourfiniteworld.com/2022/08/23/why-no-politician-is-willing-to-tell-us-the-real-energy-story/}{Tverberg (2022) Why No Politician Is Willing to Tell Us the Real Energy Story}
+
+\href{pdf/Shiozawa_1996_Economy_as_a_Dissipative_Structure.pdf}{Shizawa (1996) Economy as Dissipative Structure (pdf)}
+
 \hypertarget{countries}{%
 \chapter{Countries}\label{countries}}
 
@@ -8207,6 +8286,17 @@ Jamaica is doing OK, but it deserves to be a rich country. It just has to keep e
 \section{Russia}\label{russia}}
 
 \includegraphics{fig/russia_share_of_world_exports.png}
+
+\hypertarget{saudi-arabia}{%
+\section{Saudi Arabia}\label{saudi-arabia}}
+
+\emph{Tverberg}
+
+Saudi Arabia does not seem to be using recent record profits to quickly raise reinvestment to the level that seemed to be required a few years ago. This suggests that Saudi Arabia needs prices that are quite a bit higher than \$100 per barrel in order to take significant steps toward extracting the country's remaining resources.
+
+\href{https://ourfiniteworld.com/2022/08/23/why-no-politician-is-willing-to-tell-us-the-real-energy-story/}{Tverberg (2022) Why No Politician Is Willing to Tell Us the Real Energy Story}
+
+\href{https://oilprice.com/Energy/Crude-Oil/Saudi-Aramco-Is-Taking-A-Page-Out-Of-The-US-Shale-Playbook.html}{Messler (2022) Saudi Aramco Is Taking A Page Out Of The U.S. Shale Playbook}
 
 \hypertarget{turkey}{%
 \section{Turkey}\label{turkey}}
