--- a/recs.tex
+++ b/recs.tex
@@ -82,7 +82,7 @@
 
 \title{Economics}
 \author{Dyrehaugen Web Notebook}
-\date{2022-09-17}
+\date{2022-09-19}
 
 \begin{document}
 \maketitle
@@ -3698,12 +3698,23 @@ Stop talking about inequality, start talking about exploitation.
 \hypertarget{us-and-uk-are-poor-countries-with-rich-people-within}{%
 \section{US and UK are poor countries with rich people within}\label{us-and-uk-are-poor-countries-with-rich-people-within}}
 
+\emph{Murdoch}
+
 \includegraphics{fig/US_UK_Poor_Countries_with_Rich_People.png}
 
 On comparison of income levels adjusting for inequality
 UK \& USA emerge as ``poor societies'' with rich people in them.
 
+\href{https://twitter.com/jburnmurdoch/status/1570832839318605824}{Murdoch (2022) Twitter Thread}
+
 \citep[ (2022) FT (paywall)]{jburnmurdoch}(\url{https://www.ft.com/content/ef265420-45e8-497b-b308-c951baa68945})
+
+\emph{Smith}
+
+By focusing only on the rich and the poor, Murdoch leaves out something incredibly important --- the middle class. Of course it's important to uplift the people at the bottom of the socioeconomic ladder. But most people are not at the bottom of the ladder. That's true by definition. And when we look at how Americans in the middle of the distribution are doing, we see that America is not a ``poor society'' at all --- in fact, it's one of the richest on Earth.
+America's middle class has higher living standards than almost any other country's middle class
+
+\href{https://noahpinion.substack.com/p/no-the-us-is-not-a-poor-society-with}{Noah Smith (2022) We're a rich society with some very poor people.}
 
 \hypertarget{inflation-1}{%
 \chapter{Inflation}\label{inflation-1}}
