--- a/recs.tex
+++ b/recs.tex
@@ -82,7 +82,7 @@
 
 \title{Economics}
 \author{Dyrehaugen Web Notebook}
-\date{2022-12-04}
+\date{2022-12-05}
 
 \begin{document}
 \maketitle
@@ -6133,6 +6133,126 @@ Is the colossus protecting the people, or is it him they fear? Does he symbolise
 Nordhaus doesn't claim to be an art historian, so perhaps he can be forgiven for not recognising that in the world of the colossus, there is no such thing as an `externality.
 
 \href{https://www.lrb.co.uk/the-paper/v44/n03/geoff-mann/check-your-spillover}{Mann (2022) Check Your Spillover}
+
+\hypertarget{persistence-of-temperature-effects}{%
+\section{Persistence of Temperature Effects}\label{persistence-of-temperature-effects}}
+
+\emph{Duncombe on Bastien-Olvera}
+
+\textbf{Do shifts in temperature have enduring economic impacts? A ``clever'' trick identifying climate trends gets us one step closer to addressing this long-standing question in climate economics.}
+
+An open question in economics is whether shifts in temperature have long-lasting, permanent impacts on economic productivity. A drop in economic levels after an unusual event, like a heat wave, might be troubling but temporary. Economic growth deflating over a long period, however, is much more problematic.
+
+Understanding this question is essential for calculating the social cost of carbon, a critical metric for governments weighing future infrastructure and policy decisions.
+
+Now, researchers from the United States and Italy have found evidence of changes to economic growth associated with temperature shifts. These changes occurred in the gross domestic products (GDPs) of about a quarter of the world's countries over 10--15 years.
+
+Standard economic analyses ``could be dramatically underestimating the economic impacts of a warming climate.''
+
+The question here is whether an economy is able to come back from these shocks year to year, or whether the shocks permanently change the pathway of the country's economy.
+Using innovative filtering, the researchers zeroed in on climate trends instead of hard-to-parse day-to-day weather shifts.
+
+Previous work relied on a classical economic technique comparing the lagged effects of temperature changes on economic metrics.
+Instead, Bastien-Olvera and his colleagues filtered out short-term changes in temperature but kept more extended, slower developments and patterns. They focused on the temperature swings of naturally caused climate phenomena, like the El Niño--Southern Oscillation and the Pacific Decadal Oscillation, a cycle in the ocean and atmosphere that alters the temperature of Pacific waters.
+They compared the temperature shifts with World Bank data on the GDPs of more than 200 countries spanning 6 decades.
+
+The bread and butter models of climate science and economics---integrated assessment models---rely on economic assumptions about, among other things, GDP growth. Specifically, these models assume that there are no persistent effects from temperature changes on GDP growth. The latest research has cast doubt on that assumption.
+
+\href{https://eos.org/articles/a-new-approach-to-an-unresolved-mystery-in-climate-economics}{Duncombe (2022) A New Approach to an Unresolved Mystery in Climate Economics}
+
+\emph{Bastien-Olvera Abstract}
+
+It is well established that temperature variability affects a range of outcomes relevant to human welfare, including health, emotion and mood, and productivity across a number of economic sectors. However, a critical and still unresolved empirical question is whether temperature variation has a long-lasting effect on economic productivity and, therefore, whether damages compound over time in response to long-lived changes in temperature expected with climate change. Several studies have identified a relationship between temperature and gross domestic product (GDP), but empirical evidence as to the persistence of these effects is still weak. This paper presents a novel approach to isolate the persistent component of temperature effects on output using lower frequency temperature variation. The effects are heterogeneous across countries but collectively, using three different GDP datasets, we find evidence of persistent effects, implying temperature affects the determinants of economic growth, not just economic productivity. This, in turn, means that the aggregate effects of climate change on GDP may be far larger and far more uncertain than currently represented in integrated assessment models used to calculate the social cost of carbon.
+
+\emph{Bastien-Olvera Memo}
+
+Studies that allow climate change to affect the determ-
+inants of economic growth tend to produce far lar-
+ger aggregate climate change costs than studies that
+impose only level effects on production.
+
+Persistent impacts
+operate via effects on the growth rate compound
+over time, producing far larger aggregate damages
+over the long time frames relevant for assessing cli-
+mate change costs.
+
+We analyze the temperature-growth relationship with
+country-level regressions. The smaller temperature
+ranges allow us to accurately model the effects
+using a linear approximation.
+In addition,
+instead of using high-frequency, year-to-year tem-
+perature variation to estimate climate impacts on
+the economy, here we use lower frequency vari-
+ation.
+
+Our identification strategy focuses on the per-
+sistent effect of temperature by adjusting for time
+trends and country-specific dynamics (via demeaning
+and detrending) but uses lower-frequency temperat-
+ure variability instead of lags to distinguish between
+growth and levels effects. Using a low-pass filter
+instead of lags avoids adding noise terms together
+that could prevent identifying medium run persistent
+effects.
+
+Applying this test to three different datasets of
+economic growth, we fail to find strong evidence of
+only non-persistent effects. There are two key pieces
+
+of evidence. First, we found statistically significant
+persistent temperature impacts on economic growth
+in 22\% (19\%; 8\%) of the countries using the World
+Bank (Maddison Project; Barro-Ursua) dataset. Sig-
+nificant effects in these regressions implies the persist-
+ence of temperature impacts at least over the 15 year
+period of our lowest-frequency regressions. Secondly,
+we examine how regression estimates change using
+lower frequency temperature variation. The lack of
+persistent effects, as posited by the vast majority
+of integrated assessment studies estimating climate
+damages, would imply convergence of these estimates
+towards zero. But we fail to find evidence of such con-
+vergence.
+The evidence
+suggests a sensitivity of aggregate economic output
+to temperature shocks persisting over at least the 10--
+15 year time frame and a conspicuous absence of evid-
+ence for fully non-persistent levels impacts.
+
+Our approach is not able
+to distinguish between a levels effect that contin-
+ues compounding over the 15 year time-frame of
+our lowest-frequency estimates but then subsequently
+reverses, and a `pure' growth effect in which there
+is no subsequent reversal. Differentiating these two
+types of effects is a question of what happens in time-
+frames longer than 15 years, which is an inherently
+difficult empirical question due to the relatively short
+time span of data available. However, either interpret-
+ation of the filtered results (i.e.~15 years of continu-
+ously worsening levels effects followed by reversal or
+a fully persistent effect) implies persistence of dam-
+ages over time periods longer than a decade. Either
+interpretation would imply larger aggregate climate
+damages than the standard approach to representing
+climate change costs in integrated assessment mod-
+els, which assumes no persistence or compounding
+effects.
+
+While providing evidence of persistent impacts of
+temperature shocks on growth, our framework does
+not isolate the mechanisms by which they arise.
+
+Restricting
+modeling of climate change damages to only non-
+persistent levels effects likely greatly under-states both
+the uncertainty and the downside risk associated with
+climate change.
+
+\href{https://iopscience.iop.org/article/10.1088/1748-9326/ac82c2}{Bastien-Olvera (2022) Persistent effect of temperature on GDP identified from lower frequency temperature variability}
+\href{pdf/Bastien-Olvera_2022_Persistent_Temperature_Effects.pdf}{(pdf)}
 
 \hypertarget{resource-economics}{%
 \chapter{Resource Economics}\label{resource-economics}}
