--- a/recs.tex
+++ b/recs.tex
@@ -82,7 +82,7 @@
 
 \title{Economics}
 \author{Dyrehaugen Web Notebook}
-\date{2022-12-05}
+\date{2022-12-07}
 
 \begin{document}
 \maketitle
@@ -6136,6 +6136,63 @@ Nordhaus doesn't claim to be an art historian, so perhaps he can be forgiven for
 
 \hypertarget{persistence-of-temperature-effects}{%
 \section{Persistence of Temperature Effects}\label{persistence-of-temperature-effects}}
+
+\textbf{Traditional Approach}
+
+\emph{Casey Abstract}
+
+We use theory and empirics to distinguish between the impact of temperature
+on transition (temporary) and steady state (permanent) growth in output
+per capita. Standard economic theory suggests that the long-run growth rate
+of output per capita is determined entirely by the growth rate of total factor
+productivity (TFP). We find evidence suggesting that the level of temperature
+affects the level of TFP, but not the growth rate of TFP. This implies that
+a change in temperature will have a temporary, but not a permanent, impact
+on growth in output per capita. To highlight the quantitative importance of
+distinguishing between permanent and temporary changes in economic growth,
+we use our empirical estimates and theoretical framework to project the impacts
+of future increases in temperature from climate change. We find losses
+that are substantial, but smaller than those in the existing empirical literature
+that assumes a change in temperature permanently affects economic growth.
+
+\emph{Casey Memo}
+
+Two different standard approaches to modeling the relationship between temperature
+and economic output.
+
+The first approach assumes a \emph{level effect}: that a one time, permanent change in
+temperature affects the long-run level of output,
+but not the long-run growth rate of output.
+
+The second approach assumes a \emph{growth effect}: that a one time
+change in temperature affects the long-run growth rate of output.
+
+Macroeconomic climate-economy models almost always assume that temperature
+has a level effect.
+In contrast, an empirical literature argues that temperature has a growth
+effect.
+
+Estimating the
+effects of temperature on TFP, instead of on GDP per capita, can circumvent the
+issues posed by endogenous capital dynamics and better distinguish between level
+and growth effects in panel data.
+
+Finds level effect of temperature on TFP, but not a growth effect of temperature on TFP.
+
+\includegraphics{fig/casey_temp_tpf.png}
+
+\emph{Fig: Non-linear impacts of temperature change. The vertical
+lines denote the average annual temperature for selected countries in 2010, indicating their
+vulnerability to future changes in temperature.}
+
+\includegraphics{fig/casey_countries.png}
+
+\emph{Fig: Impact of climate change between TFP and capital per
+person for the 25 most populous countries. (RCP 8.5)}
+
+\href{pdf/Casey_2022_Impact_of_Rising_Temperature_Macro_Dynamics.pdf}{Casey (2022) Projecting the Impact of Rising Temperatures: The Role of Macroeconomic Dynamics (pdf)}
+
+\textbf{New Approach}
 
 \emph{Duncombe on Bastien-Olvera}
 
